[package]
name = "cygnixy-plugin-interface"
version = "0.1.1"
authors = ["Cygnixy Team"]
edition = "2021"
license = "MIT"
description = "A plugin interface for the Cygnixy framework, enabling dynamic Lua plugin integration and management."
repository = "https://github.com/cygnixy/cygnixy-plugin-interface"
readme = "README.md"
keywords = ["cygnixy", "eve_online", "framework", "bot", "plugin"]

[dependencies]
libloading = "0.8"
mlua = { version = "0.10", features = [
    "luau",
    "vendored",
    "serialize",
    "error-send",
] }
tracing = "0.1"
